# P-OTA-VEZ

./: .~lock.SDV Hackathon 2025 - Pitching Slides Template.pptx#  README.md  checklist.md
ECU/: README.md  estrutura.txt
ECU/app_a/: CMakeLists.txt  main.c
ECU/app_b/: CMakeLists.txt  main.c
ECU/bootloader/: CMakeLists.txt  main.c
ECU/linker_scripts/: app_a.ld  app_b.ld  bootloader.ld  safe_mode.ld
ECU/safe_mode/: CMakeLists.txt  main.c
ECU/shared/src/: uart.c  uart.h
bootloader/: Makefile  bootloader.elf  startup_stm32f412xx.s
bootloader/ld/: linker_boot.ld
bootloader/src/: main.c
ota-demo/: Dockerfile.ankaios  README.markdown  WorkFlow.md  docker-compose.yml  private-key.pem  public-key.pem  tree.txt
ota-demo/manifests/: bootloader.yaml  visual-templates.tar.gz.sig  visual-templates.yaml
ota-demo/scripts/: apply-update.sh  generate-keys.sh  generate-package.sh  mock-cloud.py  private-key.pem  public-key.pem  simulate-failure.sh  visual-templates.tar.gz.sig
ota-demo/tests/: dynamic-tests.sh  static-tests.sh
